@@ -1,3 +1,11 @@
+2010-03-03 Bruno Renié <bruno@renie.fr> -- 0.2.2
+
+    * Added some tests for the template rendering
+    * Javascript code for maps is completely isolated
+    * Added a 'as var_name' to the template tag for further manipulation
+    * Added tests (and a bare models.py to prevent the tests to fail)
+    * Small fixes in the docs
+
 2010-03-02 Bruno Renié <bruno@renie.fr> -- 0.2.1
 
     * Fix in the javascript: allowing more than 2 maps per page
